fix: `tan(x)` is continuous & numbers on the axis line is not aligned with center

--- a/src/style/adaptation/mobile.less
+++ b/src/style/adaptation/mobile.less
@@ -88,6 +88,13 @@
                 .graphing-container {
                     height: 49%;
                 }
+                .loading-container {
+                    height: 50px;
+                    margin-top: 100px;
+                    p {
+                        font-size: 35pt;
+                    }
+                }
                 .mobile-graphing-input-container {
                     display: flex;
                 }
