--- a/src/style/calculator/graphing.less
+++ b/src/style/calculator/graphing.less
@@ -4,6 +4,24 @@
         height: 100%;
         background-color: var(--ca-light1);
     }
+    .loading-container {
+        display: none; // flex
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all ease .3s;
+        .loading-text {
+            text-align: center;
+            p {
+                color: var(--ca-gray9);
+                font-size: 35pt;
+            }
+        }
+    }
     .mobile-graphing-input-container {
         flex: 1;
         display: none; // flex
